# SimpleSlicesLibrary

./: CMakeLists.txt  README.md
include/: string_slice.h
src/: string_slice.c
